# fuzzy-sets

./: README.md  fuzzyset.py  fuzzysetoperations.py  pyproject.toml  requirements.txt  studentExample.py  ubuntu22.04_requirements.txt
examples/discrete/: student.py
examples/fuzzy/sets/discrete/: age.py  student.py
soft/: expansion.py  fuzzysetoperations.py
soft/fuzzy/: __init__.py  membership.py  sets.py
soft/fuzzy/cluster/: ecm.py
soft/fuzzy/granulation/: clip.py
soft/fuzzy/relation/: aggregation.py  complement.py  extension.py  snorm.py  tnorm.py
soft/fuzzy/relation/continuous/: aggregation.py  tnorm.py
soft/fuzzy/relation/discrete/: complement.py  extension.py  snorm.py  tnorm.py
soft/fuzzy/sets/: continuous.py  discrete.py
soft/relation/: tnorm.py
soft/utilities/: functions.py  reproducibility.py
soft/utils/: reproducibility.py
src/fuzzy_relations/discrete/: complement.py  extension.py  snorm.py  tnorm.py
src/fuzzy_sets/: discrete.py
src/fuzzy_sets/continuous/: abstract.py  group.py  impl.py
src/fuzzy_sets/utils/: functions.py  reproducibility.py
tests/fuzzy_relations/: test_aggregation.py  test_extension.py  test_tnorms.py
tests/fuzzy_sets/: test_discrete.py
tests/fuzzy_sets/continuous/: test_continuous.py  test_group.py
unit_tests/: membership_func.pt
unit_tests/fuzzy/: test_sparse.py
unit_tests/fuzzy/relation/: test_aggregation.py  test_extension.py  test_tnorms.py
unit_tests/fuzzy/sets/: gaussian.pt  test_continuous.py  test_discrete.py  test_group.py
unit_tests/utilities/: test_reproducibility.py  test_utilities.py
(+11 files in other folders)
