[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzy-sets"
version = "0.0.1"
authors = [
  { name="John Wesley Hostetter", email="jhostetter16@gmail.com" },
]
description = "PyTorch definitions for various fuzzy set membership functions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johnHostetter/fuzzy-sets"
Issues = "https://github.com/johnHostetter/fuzzy-sets/issues"

[tool.hatch.build]
include = [
    "src/fuzzy_sets/**",
    "src/fuzzy_relations/**",
    "README.md",
    "LICENSE",
]
exclude = [
    "examples/**",
    "tests/**",
    "*.pyc",
    "*.pyo",
    ".git/**",
    "build/**",
    "dist/**",
    ".venv/**",
]
# Ignore VCS
ignore = ["*.git", "*.hg", ".git/**", ".hg/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy_sets", "src/fuzzy_relations"]